# code-as-infra

./: .gitignore  Cargo.toml  README.md  justfile
infrastructure/reverse-proxy/: Cargo.toml  Cross.toml  cai-reverse-proxy.Dockerfile  cai-reverse-proxy.container  justfile
infrastructure/reverse-proxy/quadlet/: .gitignore  cai-reverse-proxy.Dockerfile  cai-reverse-proxy.container  cai-reverse-proxy.volume
infrastructure/reverse-proxy/src/: filtering.rs  lib.rs  main.rs
infrastructure/reverse-proxy/src/proxy/: app.rs  app_context.rs  callback.rs  config.rs  mod.rs  plain.rs  tls.rs
infrastructure/reverse-proxy/src/proxy/context/: compression.rs  mod.rs  rate_limit.rs  referer_filter.rs
infrastructure/reverse-proxy/src/proxy/events/: logging.rs  mod.rs
infrastructure/reverse-proxy/src/proxy/tls/: mod.rs
infrastructure/reverse-proxy/src/proxy/tls/ssl/: certificate.rs  certificate_cache.rs  mod.rs
services/mail-queue/: env.go  go.mod  justfile  mail-queue.go  mail-request.go  mail-sender.go
services/mail-queue/quadlet/: .gitignore  justfile  mailqueue.Dockerfile  mailqueue.container  mailqueue.env
