[package]
name = "cai-reverse-proxy"
version = "0.1.0"
edition = "2024"

[features]
default = ["http2"]

# adds support for http2
http2 = []

[dependencies]
pingora = { version="0.8.1", features=["lb", "proxy", "openssl"] }
bytes = "1.0"
async-trait = "0.1.89"
http = "1.4.0"
pingora-limits = "0.6.0"
log = "0.4.29"
flexi_logger = "0.31.7"
openssl = { version = "0.10.81" }


[[bin]]
name = "cai-reverse-proxy-example"
path = "src/main.rs"
